fix: vertical align of attribute (wiki-info-box) fork.

--- a/_sass/includes/_local_nav.scss
+++ b/_sass/includes/_local_nav.scss
@@ -21,6 +21,15 @@
   //   text-align: center;
   // }
   
+  .entry-box-bar {
+    display: flex;
+    justify-content: center;
+
+    .entry-head-link-emoji-wrapper {
+      align-self: center;
+    }
+  }
+
   .entry-box-wrapper {
     width: 100%;
     // display: flex;
